--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,15 @@
 	<head>
 
 		{% load widget_tweaks %}
-
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	</head>
+    
+	 <title>Filters_For_All</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> 
+      
+  </head>
 
 
 	<body>
@@ -40,9 +45,16 @@
          <ul class="nav navbar-nav navbar-right">
           <li>
             {% if uploaded_image %}
-               <a href="{{ uploaded_image.Image.url }}" > <strong> Uploaded image </strong> </p>
-            {% endif %}        
+               <a href="{{ uploaded_image.Image.url }}" > <strong> Uploaded image </strong> </a>
+            {% endif %}         
           </li>
+
+          <li>
+            {% if image %}
+              <a href="{{ image.Image.url }}"><strong> Filtered image </strong> </a>
+            {% endif %}
+          </li>
+         
          </ul>
       
         </div><!-- /.navbar-collapse -->
@@ -64,6 +76,5 @@
     </div>
     {% endif %}
 	
-
 	</body>
 </html>
